--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <body>
     <h1>School Data</h1>
     <button>Add Student</button>
+    <h2>List of Students : </h2>
+    <div class="list">
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Class</th>
+          <th>Section</th>
+        </tr>
+        <tr>
+          <td>Raj</td>
+          <td>7</td>
+          <td>A</td>
+        </tr>
+      </table>
+    </div>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
