--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <h1>School Data</h1>
     <button>Add Student</button>
-    <h2>List of Students : </h2>
+    <div>
+      <h2>List of Students : </h2>
+      <input type="text" placeholder="Search" name="search">
+    </div>
+    
     <div class="list">
       <table>
         <tr>
